# StamFluidforGames

./: .gitignore  CMakeLists.txt  README.md
externel/: glad.c
header/: global.h  shader.h  simulation.h  util.h
include/: callback.h  global.h  shader.h  simulation.h  util.h
shader/: fshader.glsl  vshader.glsl
source/: callback.cpp  global.cpp  main.cpp  shader.cpp  simulation.cpp  util.cpp
